--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.38</version> </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
